--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body
 nav
 {
     display: flex;
-    position: fixed;
+    position: absolute;
     z-index: 10;
     height: 10vh;
     width: 95%;
@@ -192,6 +192,7 @@ nav
     width: 100%;
     background-color: #113A8A;
     display: flex;
+    flex-direction: column;
 }
 
 .offerTitle
@@ -214,14 +215,62 @@ nav
 
 .offerCaption
 {
+    margin-top: 2vh;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 500;
     font-size: 2rem;
     color: white;
 }
 
+.offerRule
+{
+    position: relative;
+    top:13vh;
+    left: 5%;
+    width: 60%;
+}
+
+.offerCards
+{
+    position: relative;
+    top: 20vh;
+    width: 100%;
+    height: 45vh;
+}
 
 
+.swiper {
+    width: 90%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    border-radius: 5%;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 /* Miscellenous */
 
 ul
