--- a/styles.css
+++ b/styles.css
@@ -302,6 +302,8 @@ hr
     height: 100vh;
     width: 100%;
     background-color: #FFC947;
+    display: flex;
+    overflow: hidden;
 }
 
 .aboutImage
@@ -309,6 +311,107 @@ hr
     position: relative;
     top:20vh;
 }
+
+.aboutUsText
+{
+    position: relative;
+    top:15vh;
+    left: 20vh;
+}
+
+.aboutUsTitle
+{
+    font-family: 'Lato', sans-serif;
+    font-size: 6rem;
+    font-weight: 700;
+    color: #113A8A;
+}
+
+.aboutUsCaption
+{
+    width:65%;
+    margin-top: 5vh;
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+    color: #30549B;
+}
+
+/* Team */
+
+.Team
+{
+    width:100%;
+    height:100vh;
+    background-color: #113A8A;
+    display: flex;
+    overflow: hidden;
+}
+
+.TeamTitle
+{
+    position: relative;
+    text-align: center;
+    top:7vh;
+    width:100%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 6rem;
+    color: #FFC947;
+
+}
+
+
+/* References */
+
+.references
+{
+    width:100%;
+    height:100vh;
+    background-color: #FFC947;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.referencesTitle
+{
+    position: relative;
+    text-align: center;
+    top:7vh;
+    width:100%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 6rem;
+    color: #113A8A;
+
+}
+.referencesCaption
+{
+    position: relative;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    color:#4764C3;
+    font-size: 1.5rem;
+    top: 10vh;
+}
+
+.referencesCards
+{
+    position: relative;
+    top:22vh;
+    height:50vh;
+    width:100%;
+}
+/* footer */
+
+.footer
+{
+    height: 30vh;
+    width: 100%;
+    background-color: #113A8A;
+}
+
+
 /* Miscellenous */
 
 ul
