--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ nav
     left:5vh;
     top:2vh;
 }
+
 .logo
 {
     height: 6vh;
@@ -62,6 +63,7 @@ nav
 
 
 /* Hero */
+
 .hero
 {
     display: flex;
@@ -77,7 +79,6 @@ nav
     z-index : 1;
     bottom: -15px;
     right: 0px;
-    /* width: 50%; */
 }
 
 .heroTitle
@@ -87,22 +88,20 @@ nav
     left: 5%;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
-    font-size: 7rem;
+    font-size: 12vh;
     letter-spacing: 3px;
     color: #113A8A;
-
 }
 
 .heroCaption
 {
     position: absolute;
-    top: 45vh;
+    top: 46vh;
     left: 5%;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 500;
-    font-size: 1.8rem;
+    font-size: 3vh;
     color: #3D598E;
-
 }
 
 .heroAnimation
@@ -115,7 +114,7 @@ nav
 .line1, .line2, .line3
 {
     font-family: 'Lato', sans-serif;
-    font-size: 10rem;
+    font-size: 15vh;
     font-weight: 700;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px;
@@ -130,7 +129,7 @@ nav
     top: 78vh;
     left: 26%;
     height: 10vh;
-    width:46%;
+    width:81vh;
     border-radius: 6vh;
     background-color: #113A8A;
 }
@@ -146,7 +145,7 @@ nav
     background-color: white;
     text-align: center;
     font-family: 'Lato', sans-serif;
-    font-size: 1.8rem;
+    font-size: 3vh;
     color:#113A8A;
     padding-top:1.2vh;
 }
@@ -175,7 +174,7 @@ nav
     background-color: #FFC947;
     text-align: center;
     font-family: 'Lato', sans-serif;
-    font-size: 1.8rem;
+    font-size: 3vh;
     color:#113A8A;
     padding-top:1.2vh;
 
@@ -207,12 +206,11 @@ nav
 .offerHeader
 {
     font-family: 'Lato', sans-serif;
-    font-size: 7rem;
+    font-size: 12vh;
     font-weight: 700;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 3px;
     color: #ffc947;
-
 }
 
 .offerCaption
@@ -220,7 +218,7 @@ nav
     margin-top: 2vh;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 4vh;
     color: white;
 }
 
@@ -256,7 +254,7 @@ hr
     border-radius: 5vh;
     background-color: #FFC947;
     font-family: 'Lato', sans-serif;
-    font-size: 2rem;
+    font-size: 3vh;
     text-align: center;
     color: #0A1931;
 }
@@ -322,7 +320,7 @@ hr
 .aboutUsTitle
 {
     font-family: 'Lato', sans-serif;
-    font-size: 6rem;
+    font-size: 12vh;
     font-weight: 700;
     color: #113A8A;
 }
@@ -332,7 +330,7 @@ hr
     width:65%;
     margin-top: 5vh;
     font-family: 'Lato', sans-serif;
-    font-size: 2rem;
+    font-size: 3vh;
     color: #30549B;
 }
 
@@ -355,11 +353,10 @@ hr
     width:100%;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 6rem;
+    font-size: 12vh;
     color: #FFC947;
 
 }
-
 
 /* References */
 
@@ -381,7 +378,7 @@ hr
     width:100%;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 6rem;
+    font-size: 12vh;
     color: #113A8A;
 
 }
@@ -391,7 +388,7 @@ hr
     text-align: center;
     font-family: 'Lato', sans-serif;
     color:#4764C3;
-    font-size: 1.5rem;
+    font-size: 3vh;
     top: 10vh;
 }
 
@@ -411,7 +408,6 @@ hr
     background-color: #113A8A;
 }
 
-
 /* Miscellenous */
 
 ul
@@ -427,7 +423,7 @@ input
 
 input[type="text"]
 {
-    font-size:2rem;
+    font-size:3vh;
     font-family: 'Lato', sans-serif;
 }
 
