--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ nav
 .navbarList
 {
     position: absolute;
-    top:1vh;
     left:12vh;
     display:flex;
     gap: 35px;
@@ -108,17 +107,19 @@ nav
 {
     position: relative;
     top:50vh;
-    left:2vh;
+    left:-50vh;
 }
 
 .line1, .line2, .line3
 {
     font-family: 'Lato', sans-serif;
+    overflow: none;
     font-size: 15vh;
     font-weight: 700;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 2px;
     color: #185ADB;
+    white-space: nowrap;
 }
 
 .searchBar
@@ -239,7 +240,7 @@ hr
 .offerCards
 {
     position: relative;
-    top: 20vh;
+    top: 18vh;
     width: 100%;
     height: 45vh;
 }
@@ -460,3 +461,28 @@ input[type="text"]
 {
     display: block;
 }
+.hell
+{
+    display: flex;
+    width: 300%;
+    /* height: 300vh; */
+}
+section
+{
+    position: relative;
+    left: 0.5%;
+    display: flex;
+    width: 100%;
+    height: 50vh;
+    gap: 3%;
+    background-color: #113A8A;
+}
+.card
+{
+    position: relative;
+    height: 50vh;
+    width: 30%;
+    background-color: white;
+    border-radius: 25px;
+}
+
