--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,7 @@ nav
     position: relative;
     top:50vh;
     left:-50vh;
+    z-index: 0;
 }
 
 .line1, .line2, .line3
@@ -201,6 +202,7 @@ nav
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    z-index: 2;
 }
 
 .offerTitle
