--- a/detailOffer.css
+++ b/detailOffer.css
@@ -124,10 +124,11 @@ input[type="text"]
 .offersHero
 {
     width:100%;
-    height: 320vh;
+    height: auto;
     background-color: #FFC947;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100vh;
 }
 
 .offersTitle
@@ -254,6 +255,8 @@ input[type="text"]
 }
 .footer
 {
+    position: relative;
+    padding-top: 10vh;
     height: 30vh;
     width: 100%;
     background-color: #113A8A;
