--- a/detailOffer.css
+++ b/detailOffer.css
@@ -113,11 +113,11 @@ input
     border:none;
 }
 
-input[type="text"]
+/* input[type="text"]
 {
     font-size:3vh;
     font-family: 'Lato', sans-serif;
-}
+} */
 
 /*----------------------- detailed offers Page -------------------------------*/
 
@@ -237,11 +237,13 @@ input[type="text"]
 
 .contactUsForm
 {
+    box-sizing: border-box;
     position: relative;
     height: 120vh;
     width: 30vw;
     border-radius: 5vh;
     background: #113A8A;
+    padding: 2.5vw;
 }
 
 .sellerProfile
@@ -262,3 +264,78 @@ input[type="text"]
     background-color: #113A8A;
 }
  
+.form__group {
+    padding-bottom: 5vh;
+    width: 100%;
+}
+
+.form__heading {
+    color: #FFC947;
+    padding-bottom: 2vh;
+}
+
+.form__input {
+    box-sizing: border-box;
+    padding: 1rem;
+    margin-top: 1vh;
+    height: 3vh;
+    width: 100%;
+    outline: none;
+    background-color: whitesmoke;
+    border: solid 2px #113A8A;
+    border-radius: 0.25rem;
+    transition: border 200ms ease-in;
+}
+
+.form__input:focus {
+    border: solid 3px #FFC947;
+}
+
+.form__label {
+    padding-bottom: 2vh;
+    font-family: 'Ubuntu';
+    color: #FFC947;
+}
+
+textarea {
+    resize: none;
+    box-sizing: border-box;
+    padding: 1rem;
+    margin-top: 1vh;
+    width: 100%;
+    outline: none;
+    background-color: whitesmoke;
+    border: solid 2px #113A8A;
+    border-radius: 0.25rem;
+    transition: border 200ms ease-in;
+}
+
+.form__checkbox {
+    height: 3vh;
+    width: auto;
+    padding-right: 1rem;
+    float: inline-start;
+    margin-top: -5vh;
+}
+
+.form__checkbox__text {
+    position: absolute;
+    margin-top: -1vh;
+    margin-left: 1vw;
+}
+
+.form__submit {
+    box-sizing: border-box;
+    width: 100%;
+    height: 7.5vh;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+    background-color: #FFC947;
+    border: none;
+    font-size: 3.5vh;
+    font-family: 'Ubuntu';
+    color: #113A8A;
+    border-radius: 0.25rem;
+    text-align: center;
+    margin-top: 8vh;
+}
